[tool.poetry]
name = "DataWagonTeam"
version = "0.9.9"
description = ""
authors = [
    
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
numpy = "1.25.0"
pandas = "2.1.0"
flask-cors = "^4.0.0"
osmnx = "^1.7.1"
geopandas = "^0.14.0"
folium = "^0.15.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
